--- a/css/screen.css
+++ b/css/screen.css
@@ -597,15 +597,35 @@ div#footer {
     box-shadow: inset 0px 7px 7px -7px #000; 
 }
 
-div#container {
-    
-}
+
 div#contact {
-    width: 91%;
+    width: 70%;
     margin: auto;
     font-family: "Karla", Arial, sans-serif;
    
 }
+
+@media screen and (min-width: 480px) {
+div#contact {
+    width: 75%;
+    margin: auto;
+    font-family: "Karla", Arial, sans-serif;
+}   
+} 
+@media screen and (min-width: 768px) {
+div#contact {
+    width: 83%;
+    margin: auto;
+    font-family: "Karla", Arial, sans-serif;
+}   
+} 
+@media screen and (min-width: 1024px) {
+div#contact {
+    width: 91%;
+    margin: auto;
+    font-family: "Karla", Arial, sans-serif;
+}   
+} 
 
 div#contact h3 {
     font-size: 2.1em;
@@ -623,10 +643,24 @@ div#contact img {
 }
 
 div#commons p {
+    color: #fff;
+    margin-top: 3em;
+}
+
+@media screen and (max-width: 320px) {
+div#commons p {
+    color: #fff;
+    font-size: .7em;
+    margin-top: 3em;
+}
+}
+
+/*
+div#commons p {
     float: right;
     color: #fff;
 }
-
+*/
 div#commons p a {
     color: #BEC1E3;
 }
