--- a/css/screen.css
+++ b/css/screen.css
@@ -301,9 +301,7 @@ font-size: 2em;
 font-family: "Montserrat", "Myriad Pro", Arial, serif;
 color: /*#7E92A9*/ rgba(197, 214, 215, 0.6);
 font-weight: 700;
-  /*margin-left:  12.69%;      164 / 1292= .1269    */
 margin-bottom:  5.25%;      /*   42 / 1292 = .0325   */
-/* margin-top:  4.2%;     / 1292 =  .0727  */
 }
 
 @media screen and (min-width: 480px) {
@@ -312,9 +310,7 @@ font-size: 6em;
 font-family: "Montserrat", "Myriad Pro", Arial, serif;
 color: /*#7E92A9*/ rgba(197, 214, 215, 0.6);
 font-weight: 700;
-  /*margin-left:  12.69%;      164 / 1292= .1269    */
 margin-bottom:  3.25%;      /*   42 / 1292 = .0325   */
-/* margin-top:  4.2%;     / 1292 =  .0727  */
 }
 }
 
@@ -324,9 +320,7 @@ font-size: 9em;
 font-family: "Montserrat", "Myriad Pro", Arial, serif;
 color: /*#7E92A9*/ rgba(197, 214, 215, 0.6);
 font-weight: 700;
-  /*margin-left:  12.69%;      164 / 1292= .1269    */
 margin-bottom:  3.25%;      /*   42 / 1292 = .0325   */
-/* margin-top:  4.2%;     / 1292 =  .0727  */
 }
 }
 div#big-blurb-home {
@@ -345,20 +339,6 @@ font-weight: 700;
   /*margin-left:  12.69%;      164 / 1292= .1269    */
 margin-bottom:  3.25%;      /*   42 / 1292 = .0325   */
 margin-top:  7.2%;  /*   / 1292 =  .0727  */
-}
-
-
-div#content {
-/* position: relative;  */
-display: block;
-position: relative;
-z-index: 15;
-clear: both;
-width: 100%;   /* 1115 / 1366 = .8162 */
-/*margin: auto;*/
-/* background-color: red; */
-margin-top:  10em; /* 53.5/1292 = .0414 */
-/*  margin: 170px 10px 0px 0px;  */
 }
 
 div#work-content {
@@ -436,38 +416,132 @@ padding-bottom:   4.14%; /* 53.5/1292 = .0414 */
 .digital {
 text-transform: uppercase;
 color: gray;
-font-size: 1.1em;
-margin-right: 20px;
-margin-left: 20px;
+font-size: .8em;
+margin-left: 10px;
 }
 
+@media screen and (min-width: 480px) {
+.digital {
+text-transform: uppercase;
+color: gray;
+font-size: 1.1em;
+margin-left: 10px;
+}
+}
+.print {
+text-transform: uppercase;
+color: #BEC1E3;
+font-size: .8em;
+margin-left: 10px;
+}
+
+@media screen and (min-width: 480px) {
 .print {
 text-transform: uppercase;
 color: #BEC1E3;
 font-size: 1.1em;
-margin-right: 20px;
+margin-right: 15px;
+}
+}
+.print a {
+    color: #7698A1;
+    font-weight: bold;
+    font-size: 2.2em;
+    text-transform: uppercase;
+}
+@media screen and (min-width: 480px) {
+.print a {
+    color: #7698A1;
+    font-weight: bold;
+    font-size: 2.5em;
+    text-transform: uppercase;
+}
 }
 
+@media screen and (min-width: 640px) {
 .print a {
     color: #7698A1;
     font-weight: bold;
     font-size: 3em;
     text-transform: uppercase;
 }
+}
+.digital a {
+    color: #ADBC93;
+    font-weight: bold;
+    font-size: 2.2em;
+    text-transform: uppercase;
+}
 
+@media screen and (min-width: 480px) {
+.digital a {
+    color: #ADBC93;
+    font-weight: bold;
+    font-size: 2.5em;
+    text-transform: uppercase;
+}
+}
+
+@media screen and (min-width: 640px) {
 .digital a {
     color: #ADBC93;
     font-weight: bold;
     font-size: 3em;
     text-transform: uppercase;
 }
+}
 
 div#print-digital h2{
     display: inline;
-    margin-left: 100px;
+    /* margin-left: 15%; */
+}
+
+
+
+div#work h3, div#about h3 {
+    color: #43405D;
+    font-family: "Lato", Arial, sans-serif;
+    font-size: 1.9em;
+    line-height: 2.1em;
+}
+
+ div#work ul{
+    color: #43405D;
+    font-size: 1em;
+    /* margin-left: 5px; */
+}
+
+@media screen and (min-width: 480px) {
+div#work ul{
+    color: #43405D;
+    font-size: 1em;
+    margin-left: 20px;
+}
+}
+@media screen and (min-width: 768px) {
+div#work ul{
+    color: #43405D;
+    font-size: 1.1em;
+    margin-left: 20px;
+   -moz-column-count: 2;
+    -moz-column-gap: 10px;
+    -webkit-column-count: 2;
+    -webkit-column-gap: 10px;
+    column-count: 2;
+    column-gap: 10px;
+}
 }
 
 /***********Styles Specific To About, Work Pages */
+div#content {
+display: block;
+position: relative;
+z-index: 15;
+clear: both;
+width: 100%;  
+margin-top:  10em; 
+}
+
 
 div#about, div#work {
     display: block;
@@ -541,28 +615,6 @@ div#about p, div#work ul, div#work p {
     color: #484754;
 }
 
-div#work h3, div#about h3 {
-    color: #43405D;
-    font-family: "Lato", Arial, sans-serif;
-    font-size: 1.9em;
-    line-height: 2.1em;
-}
-
-div#work ul{
-    color: #43405D;
-    font-size: 1.1em;
-    margin-left: 20px;
-   -moz-column-count: 2;
-    -moz-column-gap: 10px;
-    -webkit-column-count: 2;
-    -webkit-column-gap: 10px;
-    column-count: 2;
-    column-gap: 10px;
-}
-
-div#work li{
-    margin-right: 30px;
-}
 
 
 
@@ -610,14 +662,25 @@ div#footer {
     min-width: 100%;
     clear: both;
     background: #434157;
-    padding: 20px 0px 90px 0px;
+    padding: 20px 0px 60px 0px;
     margin-top:  4.14%; /* 53.5/1292 = .0414 */
     -webkit-box-shadow: inset 0px 7px 7px -7px #000; 
     -moz-box-shadow: inset 0px 7px 7px -7px #000; 
     box-shadow: inset 0px 7px 7px -7px #000; 
 }
 
-
+@media screen and (min-width: 640px) {
+div#footer {
+    min-width: 100%;
+    clear: both;
+    background: #434157;
+    padding: 20px 0px 90px 0px;
+    margin-top:  4.14%; /* 53.5/1292 = .0414 */
+    -webkit-box-shadow: inset 0px 7px 7px -7px #000; 
+    -moz-box-shadow: inset 0px 7px 7px -7px #000; 
+    box-shadow: inset 0px 7px 7px -7px #000; 
+}
+}
 div#contact {
     width: 70%;
     margin: auto;
