--- a/css/screen.css
+++ b/css/screen.css
@@ -278,14 +278,14 @@ div#wrapper {
 }
 div#big-blurb {
     /*position: absolute;  */
-     width: 30%;
+     /*width: 30%; */
     float: left; 
     z-index: 10;
   /* margin-right: 400px; */
   /*padding: 20px 400px 0px 80px; */
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 1024px) {
 div#big-blurb {
     position: absolute; 
      width: 30%;
@@ -296,33 +296,46 @@ div#big-blurb {
 }
 }
 
+/* @media screen and (min-width: 480px) {
 div#big-blurb {
+    position: absolute; 
+     width: 30%;
+    float: left; 
+    z-index: 10;
+  /* margin-right: 400px; */
+  /*padding: 20px 400px 0px 80px; */
+/*}
+} */
+
+div#big-blurb p{
 font-size: 2em;  
-font-family: "Montserrat", "Myriad Pro", Arial, serif;
+font-family: "Montserrat", "Myriad Pro", Arial, sans-serif;
 color: /*#7E92A9*/ rgba(197, 214, 215, 0.6);
 font-weight: 700;
-margin-bottom:  5.25%;      /*   42 / 1292 = .0325   */
+/*margin-bottom:  5.25%;      /*   42 / 1292 = .0325   */
 }
 
 @media screen and (min-width: 480px) {
-div#big-blurb {
-font-size: 6em;  
-font-family: "Montserrat", "Myriad Pro", Arial, serif;
+div#big-blurb p{
+font-size: 2.7em;  
+font-family: "Montserrat", "Myriad Pro", Arial, sans-serif;
 color: /*#7E92A9*/ rgba(197, 214, 215, 0.6);
 font-weight: 700;
-margin-bottom:  3.25%;      /*   42 / 1292 = .0325   */
+/*margin-bottom:  3.25%;      /*   42 / 1292 = .0325   */
 }
 }
 
 @media screen and (min-width: 640px) {
-div#big-blurb {
-font-size: 9em;  
-font-family: "Montserrat", "Myriad Pro", Arial, serif;
+div#big-blurb p{
+font-size: 4em;  
+font-family: "Montserrat", "Myriad Pro", Arial, sans-serif;
 color: /*#7E92A9*/ rgba(197, 214, 215, 0.6);
 font-weight: 700;
-margin-bottom:  3.25%;      /*   42 / 1292 = .0325   */
+/*margin-bottom:  3.25%;      /*   42 / 1292 = .0325   */
 }
 }
+
+
 div#big-blurb-home {
   display: block;
   width: 80%;
