--- a/css/screen.css
+++ b/css/screen.css
@@ -511,7 +511,7 @@ div#print-digital h2{
 
 
 
-div#work h3, div#about h3 {
+div#work h3, div#about h3, div#connect h3 {
     color: #43405D;
     font-family: "Lato", Arial, sans-serif;
     font-size: 1.9em;
@@ -556,7 +556,7 @@ margin-top:  10em;
 }
 
 
-div#about, div#work {
+div#about, div#work, div#connect {
     display: block;
     margin-top: 15%;
     background: rgb (197, 214, 215);
@@ -578,7 +578,7 @@ div#about, div#work {
 } */
 
 @media screen and (min-width: 640px) {
-div#about, div#work {
+div#about, div#work, div#connect {
     display: block;
     margin-left: 5%;  /* 501/1366= .3667*/
     margin-top: 5%;
@@ -593,7 +593,7 @@ div#about, div#work {
 
 
 @media screen and (min-width: 863px) {
-div#about, div#work {
+div#about, div#work, div#connect {
     display: block;
     margin-left: 20%;  /* 501/1366= .3667*/
     margin-top: 5%;
@@ -620,7 +620,7 @@ div#about, div#work {
 }
 }
 
-div#about p, div#work ul, div#work p {
+div#about p, div#work ul, div#work p,  {
     font-family: "Lato", /*"Noto Sans", "Puritan", "Sans Source Pro", "Varela", */Arial, sans-serif;
     margin-bottom: 1.3em;
     font-size: 1em;
@@ -628,10 +628,76 @@ div#about p, div#work ul, div#work p {
     color: #484754;
 }
 
+label { 
+    float: left;
+    clear: left;
+    margin: 1em 2em 0em 0em;
+    font-family: "Karla", Arial, sans-serif;
+    font-size: 1em;
+    color: #484754;
+    text-transform: uppercase;
+}
+
+@media screen and (min-width: 752px) {
+label {
+text-align: right;
+margin-right: 1em;
+}
+}
+
+input {
+    font-family: "Lato", Arial, sans-serif;
+    width: 80%;
+    max-width: 375px;
+    height: 33px;
+    border-radius: 5px;
+    margin: .3em 3em 0em 0em;
+}
+
+@media screen and (min-width: 752px) {
+    label {
+    margin-top: 1.9em;
+}
+}
+
+@media screen and (min-width: 752px) {
+    input, textarea {
+    margin-top: 1em;
+}
+}
+
+@media screen and (min-width: 752px) {
+    textarea {
+    margin-top: 3em;
+}
+}
+
+
+textarea {
+    width: 80%;
+    max-width: 375px;
+    height: 150px;
+    border-radius: 8px;
+    margin: .3em 2em 0em 0em;
+    float: left;
+}
+
+   input[type=submit] {
+    float: left;  
+    clear: left;  
+    width: 200px;
+    height: 40px;
+    margin-top: 1.5em;
+    border-radius: 7px;
+    -webkit-box-shadow: inset 2px -7px 7px -7px #000; 
+    -moz-box-shadow: inset 0px 7px 7px -7px #000; 
+    box-shadow: inset 2px 7px 7px -7px #000;
+} 
 
 
 
-} /******end 1275px @media screen ********/
+
+/******end 1275px @media screen ********/
 
 /*@media screen (min-width:1000px)   {
 div#about {
