--- a/css/screen.css
+++ b/css/screen.css
@@ -525,7 +525,7 @@ div#print-digital h2{
 
 
 
-div#work h3, div#about h3, div#connect h3 {
+div#work h3, div#about h3, div#connect h3, div#resume h3 {
     color: #43405D;
     font-family: "Lato", Arial, sans-serif;
     font-size: 1.9em;
@@ -570,7 +570,10 @@ margin-top:  10em;
 }
 
 
-div#about, div#work, div#connect, div#home-about {
+div#about, div#work, 
+div#connect, div#home-about, 
+div#resume, div#print-gallery,
+div#digital-gallery {
     display: block;
     margin-top: 15%;
     background: rgb (197, 214, 215);
@@ -592,7 +595,9 @@ div#about, div#work, div#connect, div#home-about {
 } */
 
 @media screen and (min-width: 640px) {
-div#about, div#work, div#connect {
+div#about, div#work, 
+div#connect, div#resume, 
+div#print-gallery, div#digital-gallery {
     display: block;
     margin-left: 5%;  /* 501/1366= .3667*/
     margin-top: 5%;
@@ -607,7 +612,9 @@ div#about, div#work, div#connect {
 
 
 @media screen and (min-width: 863px) {
-div#about, div#work, div#connect {
+div#about, div#work, 
+div#connect, div#resume, 
+div#print-gallery, div#digital-gallery {
     display: block;
     margin-left: 20%;  /* 501/1366= .3667*/
     margin-top: 5%;
@@ -621,7 +628,9 @@ div#about, div#work, div#connect {
 }
 
 @media screen and (min-width: 1024px) {
-div#about, div#work {
+div#about, div#work, 
+div#resume, div#print-gallery,
+div#digital-gallery {
     display: block;
     margin-left: 36%;  /* 501/1366= .3667*/
     margin-top: 5%;
@@ -634,7 +643,10 @@ div#about, div#work {
 }
 }
 
-div#about p, div#work ul, div#work p, div#home-about {
+div#about p, div#work ul, 
+div#work p, div#home-about, 
+div#resume, div#print-gallery,
+div#digital-gallery {
     font-family: "Lato", /*"Noto Sans", "Puritan", "Sans Source Pro", "Varela", */Arial, sans-serif;
     margin-bottom: 1.3em;
     font-size: 1em;
@@ -746,6 +758,13 @@ color: #6B956B;
 
 .highlight-purple {
     color: #BEC1E3;
+}
+
+
+#print-gallery img, #digital-gallery img {
+    width: 40%;
+    max-width: 300px;
+    /*display: block;*/
 }
 
 
