--- a/css/print.css
+++ b/css/print.css
@@ -11,7 +11,7 @@ div#header img {
 
 p {
   font-family: "Lato", Arial, sans-serif;
-  font-size: 14pt;
+  font-size: 13pt;
 }
 
 div#big-blurb, div#big-blurb-home {
@@ -89,7 +89,7 @@ ul.validators {
 div#content a:link:after,
 div#content a:visited:after {
    content: " [" attr(href) "] ";
-   font-size: 90%;
+  /* font-size: 90%; */
    font-family: "Courier New", Courier, monospace;
 }
 
