--- a/css/print.css
+++ b/css/print.css
@@ -2,21 +2,74 @@
 
 
 html {
-  margin: 15pt 20pt;
+  margin: auto;
 }
+
 div#header img {
     width:  300px; 
-    margin: auto;
+    margin: 40pt 0pt;
 }
 
-p {
+h1 {
+  font-family: "Montserrat", "Myriad Pro", Arial, sans-serif;
+  font-size: 20pt;
+}
+
+h2 {
   font-family: "Lato", Arial, sans-serif;
-  font-size: 13pt;
+  font-size: 30pt;
+  color: black;
+  margin: 35pt 0pt 10pt 0pt;
 }
 
-div#big-blurb, div#big-blurb-home {
+a, a:visited {
+  color: black;
+}
+
+ul img {
+  width: 250pt;
+  display: inline;
+  float: left;
+}
+
+ul li img {
+    margin: 30pt;
+}
+
+.invite img{
+  width: 100pt;
+  height: 80pt;
+}
+
+.tall img {
+  width: 40pt;
+  height: 110pt;
+}
+
+.wide img{
+  width: 150pt;
+}
+
+div#footer img {
+  width: 20pt;
+}
+
+div#footer h3 {
+  margin: 20pt 0pt 10pt 0pt;
+}
+
+div#home-about p {
+  font-family: "Lato", Arial, sans-serif;
+  font-size: 15pt;
+
+}
+
+div#home-about {
+    margin: 12pt 30pt;
+}
+/*div#big-blurb p, div#big-blurb-home p{
   font-family: "Monserrat", Arial, sans-serif;
-  font-size: 18pt;
+  font-size: 20pt;
   font-weight: bold;
   margin: 2em 1em;
 }
@@ -37,31 +90,18 @@ div#footer img {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* Base Styles */
 
 /* Bold on headings, b, and strong */
-h1,h2,h3,h4,h5,h6,b,strong { font-weight: bold; }
+/*h1,h2,h3,h4,h5,h6,b,strong { font-weight: bold; }
 /* Italic on i, em, and cite: */
-i,em,cite { font-style: italic; }
+/*i,em,cite { font-style: italic; }
 
 /*
   Print all text color as black, including links.
 */
 
-* { color: black; }
+/* { color: black; }
 
 /*
   Hide the accessibility navigation, the site navigation,
@@ -85,12 +125,12 @@ ul.validators {
   the content: property.
   See http://www.alistapart.com/articles/goingtoprint/
 */
-
+/*
 div#content a:link:after,
 div#content a:visited:after {
    content: " [" attr(href) "] ";
   /* font-size: 90%; */
-   font-family: "Courier New", Courier, monospace;
+ /*  font-family: "Courier New", Courier, monospace;
 }
 
 /*
@@ -98,8 +138,9 @@ div#content a:visited:after {
   run the expansion in the title attribute in 
   parentheses.
 */
-
+/*
 abbr:after,
 acronym:after {
      content: " (" attr(title) ") ";
 }
+*/
