--- a/css/screen.css
+++ b/css/screen.css
@@ -341,7 +341,7 @@ div#big-blurb h1, div#big-blurb-home h1{
 }
 @media screen and (min-width: 1024px) {
 div#big-blurb h1, div#big-blurb-home h1{
-    font-size: 3.5em;  
+    font-size: 3.2em;  
 }
 }
 
@@ -398,8 +398,16 @@ div#print-digital h2{
 }   
 
 /********************* NON Home Pages **************/
-div#content h3, div#resume h3 {
+div#content h3, div#resume h3,
+div#go-resume a{
     color: #43405D;
+    font-family: "Lato", Arial, sans-serif;
+    font-size: 1.9em;
+    line-height: 2.1em;
+}
+
+div#go-resume a {
+    color: #7E92A9;
     font-family: "Lato", Arial, sans-serif;
     font-size: 1.9em;
     line-height: 2.1em;
