more small changes

--- a/css/screen.css
+++ b/css/screen.css
@@ -362,7 +362,7 @@ font-size: .8em;
 margin-left: 10px;
 }
 .print  {
-color: #BEC1E3;
+color: #7698A1;
 }
 .digital {
     color: #ADBC93;
@@ -375,15 +375,15 @@ color: #BEC1E3;
 div#print-digital h2{
     display: inline;
 }
-.print h2, .digital h2 {
+.print a, .digital a{
     font-weight: bold;
     font-size: 2.2em;
     text-transform: uppercase;
 }
-.print h2 {
+.print a{
     color: #7698A1;
 }
-.digital h2 {
+.digital  a{
     color: #ADBC93;
 }
 @media screen and (min-width: 480px) {
