--- a/css/print.css
+++ b/css/print.css
@@ -1,137 +1,55 @@
-/* print.css Print Styles */
+/* print.css Print Styles, built on top of the Rapid Prototyping Kit*/
 
+/* Base Styles */
 
-html {
-  margin: auto;
-}
+/*  Print all text color as black, including links.   */
+* { color: black; }
 
-div#header img {
-    width:  300px; 
-    margin: 40pt 0pt;
-}
+/* Bold on headings, b, and strong */
+h1,h2,h3,h4,h5,h6,b,strong 
+{ font-weight: bold; }
 
 h1 {
   font-family: "Montserrat", "Myriad Pro", Arial, sans-serif;
-  font-size: 20pt;
+  font-size: 14pt;
+  margin-bottom: 14pt;
 }
 
 h2 {
   font-family: "Lato", Arial, sans-serif;
-  font-size: 30pt;
+  font-size: 15pt;
   color: black;
   margin: 35pt 0pt 10pt 0pt;
+  text-transform: uppercase;
 }
 
-a, a:visited {
-  color: black;
-}
-/************IMAGES***********/
-
-#short-print, #short-digital {
-  display: block;
-  width: 100%;
-}
-ul img {
-  width: 100pt;
-  display: inline;
-  float: left;
-}
-
-ul li img {
-    margin: 10pt 10pt 30pt 0pt;
-}
-
-.tall img {
-  width: 40pt;
-  height: 110pt;
-}
-*/
-div#footer {
-clear: both;
-}
-div#footer img {
-  width: 20pt;
-}
-
-div#footer h3 {
-  margin: 20pt 0pt 10pt 0pt;
-}
-
-div#home-about p {
+h2 {
   font-family: "Lato", Arial, sans-serif;
   font-size: 15pt;
-
+  color: black;
+  margin: 35pt 0pt 10pt 0pt;
+  text-transform: uppercase;
 }
 
-div#home-about {
-    margin: 12pt 30pt;
+h3 {
+  font-family: "Lato", Arial, sans-serif;
+  font-size: 14pt;
+  color: black;
+  margin: 15pt 0pt 7pt 0pt;
 }
 
-.function {
-font-weight: bold;
-margin-top: .5em;
-}
-div#content p, div#resume p,
-div#content li, div#resume li {
-    font-family:  Arial, sans-serif;
-    font-size:  12pt;
-    margin-bottom: 5pt;
-}
-
-div#content h3, div#resume h3,
-div#footer h3 {
-    font-family: Arial, sans-serif;
-    font-size: 20pt;
-    line-height: 25pt;
-    margin: 10pt 0pt 3pt 0pt;
-
-h4 {
-    font-weight: bold;
-    font-size: 14pt;
-}
-
-div#wrapper {
-    width: 82%; 
-    margin: 0 auto;
+div#header img {
+    width:  200px; 
+    margin: 20pt 0pt;
 }
 
 
-
-/*div#big-blurb p, div#big-blurb-home p{
-  font-family: "Monserrat", Arial, sans-serif;
-  font-size: 20pt;
-  font-weight: bold;
-  margin: 2em 1em;
+p {
+    font-family: "Lato", Arial, sans-serif;
+    font-size: 12pt;
+    line-height: 16pt;
+    margin-bottom: 16pt;
 }
-
-div#footer img {
-    width: 50px;
-    margin: 30pt;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-/* Base Styles */
-
-/* Bold on headings, b, and strong */
-/*h1,h2,h3,h4,h5,h6,b,strong { font-weight: bold; }
-/* Italic on i, em, and cite: */
-/*i,em,cite { font-style: italic; }
-
-/*
-  Print all text color as black, including links.
-*/
-
-/* { color: black; }
 
 /*
   Hide the accessibility navigation, the site navigation,
@@ -145,7 +63,79 @@ ul.validators {
 	display: none;
 }
 
+/******   Images *******/
 
+#short-print, #short-digital {
+  display: block;
+  width: 100%;
+  clear: both;
+  padding-top: 10px;
+}
+ul img {
+    width: 100px;
+    height: 100px;
+    display: inline;
+    float: left;
+    margin: 10pt 15pt ;
+}
+
+div#footer img {
+    width: 20px;
+    height: 20px;
+}
+
+div#footer {
+  clear: both;
+  float: left;
+  margin-top:  40pt;
+}
+
+div#footer a, div#footer p {
+    font-size: 90%;
+}
+
+div#commons {
+    font-size: 70%;
+    margin-top: 10pt;
+}
+
+ul.digital, ul.print {
+    font-size: 70%;
+    text-transform: uppercase;
+}
+
+ul.digital {
+    margin-left: 10pt;
+}
+
+ul.print {
+    margin-left: 10pt;
+}
+
+div#content ul + p  {
+    margin-top: 16pt;
+    font-weight: bold;
+}
+
+div#print-digital {
+    margin-top: 0pt;
+}
+
+div#print-digital h2 {
+    margin-top: 10pt;
+}
+
+div#content fieldset {
+    display: none;
+}
+
+.function {
+    font-weight: bold;
+}
+
+div#resume p + ul li {
+    margin-top: 10pt;
+}
 /*
   Automatically print the URLs from hyperlinks in the
   content area of a page, and put them in a monospace font,
@@ -155,12 +145,12 @@ ul.validators {
   the content: property.
   See http://www.alistapart.com/articles/goingtoprint/
 */
-/*
+
 div#content a:link:after,
 div#content a:visited:after {
    content: " [" attr(href) "] ";
-  /* font-size: 90%; */
- /*  font-family: "Courier New", Courier, monospace;
+   font-size: 85%;
+   font-family: "Courier New", Courier, monospace;
 }
 
 /*
@@ -168,9 +158,13 @@ div#content a:visited:after {
   run the expansion in the title attribute in 
   parentheses.
 */
-/*
+
 abbr:after,
 acronym:after {
      content: " (" attr(title) ") ";
 }
-*/
+
+/*****        Layout      *******/
+html {
+    margin: auto 35pt;
+}
