--- a/css/screen.css
+++ b/css/screen.css
@@ -182,11 +182,8 @@ ul#navigation li a{
 }
 
 /**********Portfolio Images ***********/
-ul img {
-    display: inline;
-    float: left; 
-    margin: 15px;
-}
+
+
 ul img {
     opacity: .5;
     -moz-opacity: .5;
@@ -194,8 +191,17 @@ ul img {
 ul img:hover {
     opacity: 9;
      -moz-opacity: 9;
+ul img {
+    display: inline;
+    float: left; 
+    margin: 15px;
+    width: 20%;
+    height: 20%;
+    max-width: 200px;
+}
 
 }
+/*
 .wide img{
    width: 45%;
 }
@@ -210,7 +216,7 @@ ul img:hover {
     height: 30%;
     max-height: 300px;
 }
-
+*/
 #short-print img, #short-digital img {
     border-radius: 5px;
     border-bottom-left-radius: 20px;
@@ -477,7 +483,9 @@ div#resume{
     line-height: 1.6em;
     color: #484754;
 }
-
+div#print-digital{
+    clear: both;
+}
  div#resume{
     margin-bottom: 1.2em;
     font-size: .9em;
