--- a/css/screen.css
+++ b/css/screen.css
@@ -191,32 +191,22 @@ ul img {
 ul img:hover {
     opacity: 9;
      -moz-opacity: 9;
+}
 ul img {
     display: inline;
     float: left; 
     margin: 15px;
-    width: 20%;
-    height: 20%;
-    max-width: 200px;
+    width: 200px;
+    height: 200px;
 }
 
+@media screen and (min-width: 480px;) {
+ul img {
+     width: 250px;
+    height: 250px;
 }
-/*
-.wide img{
-   width: 45%;
 }
- .opi img{
-    width: 92%;
-}
-.invite img{
-    width: 35%;
-    max-width: 250px;
-}
-.tall img{
-    height: 30%;
-    max-height: 300px;
-}
-*/
+
 #short-print img, #short-digital img {
     border-radius: 5px;
     border-bottom-left-radius: 20px;
@@ -261,7 +251,7 @@ div#home-about p{
     font-family: "Lato", /*"Noto Sans", "Puritan", "Sans Source Pro", "Varela", */Arial, sans-serif;
     margin-bottom: 1.3em;
     font-size: 1em;
-    line-height: 1.1em;
+    line-height: 1.2em;
     color: #484754;
 }
 @media screen and (min-width: 640px){
@@ -471,7 +461,7 @@ div#digital-gallery, div#resume {
 div#content, div#print-gallery,
 div#digital-gallery, div#resume
 div#resume {
-    margin-left: 36%;  /* 501/1366= .3667*/
+    margin-left: 38%;  /* 501/1366= .3667*/
 }
 }
 div#content p, div#content ul, 
@@ -486,6 +476,7 @@ div#resume{
 div#print-digital{
     clear: both;
 }
+
  div#resume{
     margin-bottom: 1.2em;
     font-size: .9em;
