--- a/css/screen.css
+++ b/css/screen.css
@@ -24,9 +24,7 @@ html {
     display: block;
     font-family: Arial, sans-serif;
     font-size: 16px;
-    background: 434157;
-    
-   
+    background: #434157;
 }
 body { 
     display: block;
