--- a/css/screen.css
+++ b/css/screen.css
@@ -243,7 +243,10 @@ ul img {
     min-width: 220px;
 }
 
-
+.caption {
+    font-family: "Lato", Arial, sans-serif;
+    font-size: .8em;
+}
 /********************HOME PAGE*************/
 
 div#home-about {
